# MelonCompat-and-RoseMod

./: .gitignore  MelonLoader.BepInExCompat.Mono.csproj  MelonLoader.BepInExCompat.csproj  README.md  RoseMod.BepInEx.Core.csproj  RoseMod.BepInEx.Unity.IL2CPP.csproj  RoseMod.BepInEx.Unity.Mono.csproj  RoseMod.BepInEx5.Mono.csproj  RoseMod.Core.csproj  RoseMod.Il2CppFixes.csproj  RoseMod.MelonLoader.csproj
BepInExCompat/: ClassInjectorCompatibilityPatches.cs  CompatAssemblyResolver.cs  CompatExceptionDiagnostics.cs  CompatLog.cs  CompatUnityDriver.cs  InteropNamespaceRewriter.cs  MelonAssemblyLoader.cs  MelonEventPumpBehaviour.cs  Plugin.Mono.cs  Plugin.cs  RoseModMelonSupportComponent.cs  SkippedHarmonyPatchSubstitutes.cs  UnityPhysicsCompatibility.cs
CompatVerifier/: CompatVerifier.csproj  Program.cs
ElectronInstaller/: package-lock.json  package.json
ElectronInstaller/src/: index.html  main.js  preload.js  renderer.js  (+1 more)
Installer/: BepInExPackageInstaller.cs  InstallerEngine.cs  MelonCompatInstaller.csproj  MelonLoaderInstall.cs  Program.cs  RoseModInteropPreparer.cs  app.manifest
MelonLoaderApi/: Attributes.cs  BuildInfo.cs  DelegatesAndEvents.cs  ExtendedCompatibilityFacade.cs  HarmonyLegacyFacade.cs  Logging.cs  MelonAssemblyAndHandler.cs  MelonBase.cs  MelonEnvironmentCompat.cs  MelonEventPump.cs  MelonUtils.cs  Preferences.cs  SemVersion.cs  SteamManifestReaderFacade.cs
TauriInstaller/: package-lock.json  package.json
TauriInstaller/src-tauri/: Cargo.toml  tauri.conf.json
TauriInstaller/src-tauri/src/: main.rs
scripts/: package-release.ps1
(+69 files in other folders)
